assinaturas atualizadas, para receber o nosso 1 dono da empresa